--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 <body style="overflow: hidden; background-color: rgba(0,0,0,0); margin: 0" >
-  <div id="App"></div>
+  <div id="Toolbar"></div>
 </body>
 
 <script type="text/jsx">
@@ -13,8 +13,8 @@ import ReactDOM from 'react-dom';
 import {AppContainer} from 'react-hot-loader';
 
 const render = () => {
-  const App = require('./app').default;
-  ReactDOM.render(<AppContainer><App /></AppContainer>, document.getElementById('App'));
+  const Toolbar = require('./toolbar').default;
+  ReactDOM.render(<AppContainer><Toolbar /></AppContainer>, document.getElementById('Toolbar'));
 }
 
 render();
